--- a/KizinLakayApp/app/src/main/res/layout/activity_home.xml
+++ b/KizinLakayApp/app/src/main/res/layout/activity_home.xml
@@ -14,7 +14,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
-        android:background="#fa0895"
+        android:background="#FC913A"
         android:text="Naviguez maintenant"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -23,7 +23,7 @@
 
     <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="330dp"
+        android:layout_width="match_parent"
         android:layout_height="380dp"
         android:layout_above="@+id/btnStart"
         android:layout_alignParentEnd="true"
