--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#fc913a</color>
-    <color name="colorPrimaryDark">#fc913a</color>
+    <color name="colorPrimaryDark">#f9d423</color>
     <color name="colorAccent">#ff4081</color>
 </resources>
