--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -10,11 +10,10 @@
         android:id="@+id/ivSearchDetails"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:layout_weight="0.22"
-        app:srcCompat="@mipmap/ic_launcher"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
-
+        android:layout_weight="0.22"
+        app:srcCompat="@mipmap/ic_launcher" />
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -28,33 +27,50 @@
         android:id="@+id/editText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView2"
-        android:layout_marginTop="11dp"
         android:layout_weight="0.54"
         android:ems="10"
-        android:hint="1lb. malanga        1 shallot or 1/2onion 1scallion        1 tsp salt to taste"
-        android:inputType="textMultiLine" />
+        android:hint="1 petit poivron rouge         1 oignon            300g de morue           250g de farine
+1 oeuf          1/2 sachet de levure            1 beau bouquet de persil            du thym         de l'ail
+"
+        android:inputType="textMultiLine"
+        android:maxLines="5"
+        android:layout_below="@+id/textView2"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:id="@+id/btnPreparation"
         android:layout_width="308dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="29dp"
-        android:background="#FC913A"
+        android:background="#f9d423"
         android:text="Voir preparation"
         android:textColor="@android:color/background_light"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="27dp"/>
+
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="19dp"
+        android:layout_marginTop="18dp"
         android:text="Ingredients :"
         android:textSize="14sp"
         android:layout_below="@+id/ivSearchDetails"
+        android:layout_alignParentStart="true" />
+    <EditText
+        android:id="@+id/editText2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Faire déssaler la morue une après midi dans de l'eau puis la faire ébouillanté 4 minutes.
+Mixer tout le reste ensemble.Émiettez la morue et mélangez la à la pâte.
+Faire reposer 1h.
+Puis faire frire quelques minutes et déguster.
+"
+        android:inputType="textMultiLine"
+        android:maxLines="5"
+        android:layout_below="@+id/editText"
         android:layout_alignParentStart="true" />
 </RelativeLayout>
