--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -30,4 +30,11 @@
         android:layout_alignParentStart="true"
         app:srcCompat="@drawable/home2" />
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/kizinlakaylogo"
+        android:layout_above="@+id/imageView5" />
+
 </RelativeLayout>
