--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,34 +7,43 @@
     tools:context="com.example.thodlydugue.kizinlakayapp.HomeActivity">
 
 
-    <Button
-        android:id="@+id/btnStart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:background="#f9d423"
-        android:text="Naviguez maintenant"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/logomodify"
+        android:layout_marginBottom="361dp"
+        android:layout_alignBottom="@+id/imageView5"
+        android:layout_alignParentStart="true" />
 
     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="match_parent"
-        android:layout_height="380dp"
-        android:layout_above="@+id/btnStart"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        app:srcCompat="@drawable/home2" />
+        android:layout_height="500dp"
+        app:srcCompat="@drawable/home21"
+        android:layout_marginBottom="11dp"
+        android:layout_alignParentStart="true" />
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="189dp"
+    android:background="@color/colorPrimary1"
+    android:layout_alignParentBottom="true"
+    android:layout_alignParentStart="true"
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
+    >
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/kizinlakaylogo"
-        android:layout_above="@+id/imageView5" />
+        android:layout_marginTop="50dp"
+        android:text="Bienvenue"
+        android:textColor="@color/white"
+        android:textSize="60dp"
+        android:textStyle="bold"
+        android:layout_marginLeft="50dp"
 
+        />
+</LinearLayout>
 </RelativeLayout>
