--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#fc913a</color>
     <color name="colorPrimaryDark">#f9d423</color>
     <color name="colorAccent">#ff4081</color>
+    <color name="white">#fffefe</color>
+    <color name="colorPrimary1">#fd7507</color>
 </resources>
