--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,4 +12,18 @@
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">italic</item>
     </style>
+    <style name="Textview">
+        <item name="@android:textSize">32sp</item>
+        <item name="@android:paddingLeft">4dp</item>
+        <item name="@android:paddingBottom">4dp</item>
+        <item name="@android:textColor">#FFFFFFFF</item>
+        <item name="@android:textStyle">bold</item>
+    </style>
+
+    <style name="Textview.Blurry">
+        <item name="@android:shadowColor">#BBBBBB</item>
+        <item name="@android:shadowDx">1</item>
+        <item name="@android:shadowDy">1</item>
+        <item name="@android:shadowRadius">10</item>
+    </style>
 </resources>
