--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -31,19 +31,20 @@
     android:layout_alignParentBottom="true"
     android:layout_alignParentStart="true"
 
-    >
+    android:weightSum="1">
+
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="50dp"
         android:layout_marginTop="50dp"
         android:text="Bienvenue"
         android:textColor="@color/white"
-        android:textSize="60dp"
-        android:textStyle="bold"
-        android:layout_marginLeft="50dp"
+        android:textSize="50dp"
 
-        />
+        android:textStyle="bold"
+        android:layout_weight="1.13" />
 </LinearLayout>
 </RelativeLayout>
