--- a/app/src/main/res/layout/menu_toolbar.xml
+++ b/app/src/main/res/layout/menu_toolbar.xml
@@ -26,6 +26,7 @@
         android:layout_alignBottom="@+id/toolbar"
         android:layout_alignParentEnd="true"
         android:background="#f9d423"
-        app:srcCompat="@android:drawable/ic_search_category_default" />
+        app:srcCompat="@android:drawable/ic_search_category_default"
+        android:onClick=""/>
 
 </RelativeLayout>
