--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#ff4081</color>
     <color name="white">#fffefe</color>
     <color name="colorPrimary1">#fd7507</color>
+    <color name="gris_noir">#353635</color>
 </resources>
