--- a/app/src/main/res/layout/recette_layout.xml
+++ b/app/src/main/res/layout/recette_layout.xml
@@ -27,31 +27,33 @@
         card_view:contentPadding="10dp">
 
 
-        <TextView
-            android:id="@+id/txtrecette"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:ellipsize="end"
-            android:maxLines="4"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="120dp"
             android:orientation="horizontal">
 
-            <com.example.thodlydugue.kizinlakayapp.search.ResizableImageView
+            <ImageView
                 android:id="@+id/imrecette"
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
                 android:adjustViewBounds="true"
                 android:background="@color/white"
                 android:scaleType="fitXY"
                 android:src="@mipmap/ic_launcher" />
+
+            <TextView
+                android:id="@+id/txtrecette"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:ellipsize="end"
+                android:maxLines="4"
+                android:textSize="20dp"
+                android:textStyle="bold" />
         </LinearLayout>
+
 
     </android.support.v7.widget.CardView>
 </LinearLayout>
