--- a/app/src/main/res/layout/activity_recette.xml
+++ b/app/src/main/res/layout/activity_recette.xml
@@ -8,34 +8,42 @@
 
     tools:context="com.example.thodlydugue.kizinlakayapp.MenuActivity">
 
-    <android.support.design.widget.AppBarLayout
+    <android.support.v7.widget.Toolbar
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/toolbar"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:theme="@style/AppTheme.PopupOverlay">
+        android:fitsSystemWindows="true"
+        android:minHeight="?attr/actionBarSize"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:background="#f50206"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-    </android.support.design.widget.AppBarLayout>
-
-   <!-- <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvrecettes"
-        android:layout_width="match_parent"
-        android:layout_height="531dp"
-        android:background="@color/white"
-        />-->
+    </android.support.v7.widget.Toolbar>
+    <ImageView
+        android:id="@+id/btnHomeSearch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#f50206"
+        app:srcCompat="@drawable/ic_action_home"
+        android:layout_marginEnd="29dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="12dp" />
     <LinearLayout
 
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/lvrecette">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar"
+        android:layout_alignParentStart="true">
 
-    </ListView>
+        <ListView
+            android:id="@+id/lvrecette"
+            android:layout_width="match_parent"
+            android:layout_height="517dp">
+
+        </ListView>
     </LinearLayout>
 </RelativeLayout>
