--- a/app/src/main/res/layout/layoutview_menu.xml
+++ b/app/src/main/res/layout/layoutview_menu.xml
@@ -41,56 +41,50 @@
         android:textColor="@android:color/background_light"
         android:alpha="0.5"
         android:textStyle="bold"
-        android:textSize="30sp"
+        android:textSize="25sp"
         />
 
     <Button
         android:id="@+id/btndessert"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/btnmeat"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="19dp"
         android:background="@color/gris_noir"
         android:text="DESSERTS"
         android:textColor="@android:color/background_light"
         android:alpha="0.5"
         android:textStyle="bold"
-        android:textSize="30sp"
-        />
+        android:textSize="25sp"
+        android:layout_below="@+id/btnmeat"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:id="@+id/btnsoup"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/btndessert"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="30dp"
         android:background="@color/gris_noir"
         android:text="SOUPES"
         android:textColor="@android:color/background_light"
         android:alpha="0.5"
         android:textStyle="bold"
-        android:textSize="30sp"
-        />
+        android:textSize="25sp"
+        android:layout_below="@+id/btndessert"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:id="@+id/btndrink"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/btnsoup"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="25dp"
         android:background="@color/gris_noir"
         android:text="JUS HAITIENNE"
         android:textColor="@android:color/background_light"
         android:alpha="0.5"
         android:textStyle="bold"
-        android:textSize="30sp"
-        />
+        android:textSize="25sp"
+        android:layout_below="@+id/btnsoup"
+        android:layout_centerHorizontal="true" />
 
 
 
