--- a/app/src/main/res/layout/menu_toolbar.xml
+++ b/app/src/main/res/layout/menu_toolbar.xml
@@ -14,7 +14,7 @@
         android:fitsSystemWindows="true"
         android:minHeight="?attr/actionBarSize"
         app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:background="#f9d423">
+        android:background="#f50206">
 
     </android.support.v7.widget.Toolbar>
 
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/toolbar"
         android:layout_alignParentEnd="true"
-        android:background="#f9d423"
+        android:background="#f50206"
         app:srcCompat="@android:drawable/ic_search_category_default" />
 
 
