--- a/app/src/main/res/layout/recette_layout.xml
+++ b/app/src/main/res/layout/recette_layout.xml
@@ -50,7 +50,7 @@
                 android:background="@color/white"
                 android:ellipsize="end"
                 android:maxLines="4"
-                android:textSize="20dp"
+                android:textSize="18sp"
                 android:textStyle="bold" />
         </LinearLayout>
 
