--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#fc913a</color>
-    <color name="colorPrimaryDark">#f9d423</color>
-    <color name="colorAccent">#ff4081</color>
+    <color name="colorPrimary">#f50206</color>
+    <color name="colorPrimaryDark">#f50206</color>
+    <color name="colorAccent">#e70910</color>
     <color name="white">#fffefe</color>
     <color name="colorPrimary1">#fd7507</color>
     <color name="gris_noir">#353635</color>
