--- a/app/src/main/res/layout/layoutview_menu.xml
+++ b/app/src/main/res/layout/layoutview_menu.xml
@@ -72,19 +72,19 @@
         android:layout_below="@+id/btndessert"
         android:layout_alignParentStart="true" />
 
-    <Button
-        android:id="@+id/btndrink"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_marginTop="25dp"
-        android:background="@color/gris_noir"
-        android:text="JUS HAITIENNE"
-        android:textColor="@android:color/background_light"
-        android:alpha="0.5"
-        android:textStyle="bold"
-        android:textSize="25sp"
-        android:layout_below="@+id/btnsoup"
-        android:layout_centerHorizontal="true" />
+ <Button
+     android:id="@+id/btnAperitif"
+     android:layout_width="match_parent"
+     android:layout_height="80dp"
+     android:layout_below="@+id/btnsoup"
+     android:layout_centerHorizontal="true"
+     android:layout_marginTop="25dp"
+     android:alpha="0.5"
+     android:background="@color/gris_noir"
+     android:text="Aperitif"
+     android:textColor="@android:color/background_light"
+     android:textSize="25sp"
+     android:textStyle="bold" />
 
 
 
