--- a/app/src/main/res/layout/activity_recette.xml
+++ b/app/src/main/res/layout/activity_recette.xml
@@ -21,21 +21,12 @@
 
     </android.support.design.widget.AppBarLayout>
 
-   <!-- <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvrecettes"
-        android:layout_width="match_parent"
-        android:layout_height="531dp"
-        android:background="@color/white"
-        />-->
-    <LinearLayout
+        <ListView
+            android:id="@+id/lvrecette"
+            android:layout_width="match_parent"
+            android:layout_height="513dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true">
 
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/lvrecette">
-
-    </ListView>
-    </LinearLayout>
+        </ListView>
 </RelativeLayout>
