--- a/app/src/main/res/layout/activity_recette.xml
+++ b/app/src/main/res/layout/activity_recette.xml
@@ -21,29 +21,22 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
 
-    </android.support.v7.widget.Toolbar>
-    <ImageView
-        android:id="@+id/btnHomeSearch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#f50206"
-        app:srcCompat="@drawable/ic_action_home"
-        android:layout_marginEnd="29dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="12dp" />
-    <LinearLayout
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/toolbar"
-        android:layout_alignParentStart="true">
+    </android.support.design.widget.AppBarLayout>
+
 
         <ListView
             android:id="@+id/lvrecette"
             android:layout_width="match_parent"
-            android:layout_height="517dp">
+            android:layout_height="513dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true">
 
         </ListView>
-    </LinearLayout>
+
 </RelativeLayout>
