--- a/app/src/main/res/layout/activity_recette.xml
+++ b/app/src/main/res/layout/activity_recette.xml
@@ -27,7 +27,7 @@
             android:id="@+id/lvrecette"
             android:layout_width="match_parent"
             android:layout_height="513dp"
-            android:layout_alignParentBottom="true"
+            android:layout_below="@+id/toolbar"
             android:layout_alignParentStart="true">
 
         </ListView>
