--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -63,7 +63,7 @@
         android:text="Ingredients :" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/tvIngredients"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -76,11 +76,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Preparation :"
-        android:layout_below="@+id/textView7"
+        android:layout_below="@+id/tvIngredients"
         android:layout_alignEnd="@+id/textView6" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/tvDescription"
 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
