Search data implemented

--- a/app/src/main/res/layout/layoutview_menu.xml
+++ b/app/src/main/res/layout/layoutview_menu.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/homemenu"
+    android:background="@drawable/background"
     android:scaleType="fitXY"
     >
 
@@ -30,64 +30,60 @@
 
     <Button
         android:id="@+id/btnmeat"
-        android:layout_width="match_parent"
+        android:layout_width="240dp"
         android:layout_height="80dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:layout_below="@+id/textView"
         android:layout_marginTop="40dp"
-        android:background="@color/gris_noir"
+        android:background="@drawable/design_button_menu"
         android:text="VIANDES"
-        android:textColor="@android:color/background_light"
-        android:alpha="0.5"
+        android:textColor="@color/red"
+        android:alpha="0.8"
         android:textStyle="bold"
         android:textSize="30sp"
+        android:layout_centerHorizontal="true"
         />
 
     <Button
         android:id="@+id/btndessert"
-        android:layout_width="match_parent"
+        android:layout_width="240dp"
         android:layout_height="80dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:layout_centerHorizontal="true"
         android:layout_below="@+id/btnmeat"
         android:layout_marginTop="60dp"
-        android:background="@color/gris_noir"
+        android:background="@drawable/design_button_menu"
         android:text="DESSERTS"
-        android:textColor="@android:color/background_light"
-        android:alpha="0.5"
+        android:textColor="@color/red"
+        android:alpha="0.8"
         android:textStyle="bold"
         android:textSize="30sp"
         />
 
     <Button
         android:id="@+id/btnsoup"
-        android:layout_width="match_parent"
+        android:layout_width="240dp"
         android:layout_height="80dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:layout_centerHorizontal="true"
         android:layout_below="@+id/btndessert"
         android:layout_marginTop="60dp"
-        android:background="@color/gris_noir"
+        android:background="@drawable/design_button_menu"
         android:text="SOUPES"
-        android:textColor="@android:color/background_light"
-        android:alpha="0.5"
+        android:textColor="@color/red"
+        android:alpha="0.8"
         android:textStyle="bold"
         android:textSize="30sp"
         />
 
     <Button
         android:id="@+id/btndrink"
-        android:layout_width="match_parent"
+        android:layout_width="240dp"
         android:layout_height="80dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:layout_centerHorizontal="true"
         android:layout_below="@+id/btnsoup"
-        android:layout_marginTop="60dp"
-        android:background="@color/gris_noir"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/design_button_menu"
         android:text="JUS HAITIENNE"
-        android:textColor="@android:color/background_light"
-        android:alpha="0.5"
+        android:textColor="@color/red"
+        android:alpha="0.8"
         android:textStyle="bold"
         android:textSize="30sp"
         />
