--- a/app/src/main/res/layout/activity_recette.xml
+++ b/app/src/main/res/layout/activity_recette.xml
@@ -27,15 +27,14 @@
         android:layout_height="531dp"
         android:background="@color/white"
         />-->
-    <LinearLayout
 
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/lvrecette">
+        android:id="@+id/lvrecette"
+        android:layout_marginTop="50dp"
+        >
 
     </ListView>
-    </LinearLayout>
+
 </RelativeLayout>
