--- a/app/src/main/res/layout/recette_layout.xml
+++ b/app/src/main/res/layout/recette_layout.xml
@@ -15,7 +15,9 @@
         android:background="@color/white"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"/>
-        -->
+
+       -->
+
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
@@ -31,8 +33,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-
-            <ImageView
+            <com.makeramen.roundedimageview.RoundedImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/imrecette"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minWidth="100dp"
+                android:minHeight="50dp"
+                android:scaleType="fitCenter"
+                app:riv_corner_radius="5dip"
+                app:riv_mutate_background="true"
+                app:riv_tile_mode="clamp"
+                app:riv_oval="false"
+                app:riv_border_color="#ffffff"
+                app:riv_border_width="2dp"
+                android:layout_alignParentLeft="true"
+                android:elevation="4dp"
+                android:layout_marginBottom="5dp"/>
+        <!--    <ImageView
                 android:id="@+id/imrecette"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
@@ -40,7 +58,7 @@
                 android:adjustViewBounds="true"
                 android:background="@color/white"
                 android:scaleType="fitXY"
-                android:src="@mipmap/ic_launcher" />
+                android:src="@mipmap/ic_launcher" />-->
 
             <TextView
                 android:id="@+id/txtrecette"
