--- a/app/src/main/res/layout/activity_recette.xml
+++ b/app/src/main/res/layout/activity_recette.xml
@@ -23,13 +23,22 @@
 
 
 
-        <ListView
-            android:id="@+id/lvrecette"
-            android:layout_width="match_parent"
-            android:layout_height="513dp"
-            android:layout_below="@+id/toolbar"
-            android:layout_alignParentStart="true">
 
-        </ListView>
+   <!-- <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvrecettes"
+        android:layout_width="match_parent"
+        android:layout_height="531dp"
+        android:background="@color/white"
+        />-->
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/lvrecette"
+        android:layout_marginTop="50dp"
+        >
+
+    </ListView>
+
 
 </RelativeLayout>
