--- a/app/src/main/res/layout/recette_layout.xml
+++ b/app/src/main/res/layout/recette_layout.xml
@@ -15,7 +15,9 @@
         android:background="@color/white"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"/>
-        -->
+
+       -->
+
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
@@ -32,15 +34,23 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <ImageView
+            <com.makeramen.roundedimageview.RoundedImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/imrecette"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
+                android:layout_width="100dp"
+                app:riv_corner_radius="5dip"
+                app:riv_mutate_background="true"
+                app:riv_tile_mode="clamp"
+                app:riv_oval="false"
+                app:riv_border_color="#ffffff"
+                app:riv_border_width="2dp"
                 android:layout_alignParentLeft="true"
-                android:adjustViewBounds="true"
-                android:background="@color/white"
-                android:scaleType="fitXY"
-                android:src="@mipmap/ic_launcher" />
+                android:elevation="4dp"
+                android:layout_marginBottom="5dp"/>
+
+
+
 
             <TextView
                 android:id="@+id/txtrecette"
@@ -50,8 +60,18 @@
                 android:background="@color/white"
                 android:ellipsize="end"
                 android:maxLines="4"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textSize="20dp"/>
+
+            <TextView
+                android:id="@+id/txtdescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:ellipsize="end"
+                android:maxLines="4"
+                android:textSize="15dp"/>
+
         </LinearLayout>
 
 
