--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
 
     <color name="white">#fffefe</color>
     <color name="colorPrimary1">#fd7507</color>
-    <color name="gris_noir">#353635</color>
+    <color name="gris_noir">#f5f3a6</color>
+    <color name="red">#f40509</color>
 </resources>
